--- a/client/public/index.html
+++ b/client/public/index.html
@@ -13,7 +13,7 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!-- Font Awesome -->
     <script
-      src="self https://kit.fontawesome.com/30d6fca155.js 'unsafe-inline' 'unsafe-eval';"
+      src="https://kit.fontawesome.com/30d6fca155.js"
       crossorigin="anonymous"
     ></script>
     <!--
